# netplot

./: .gitignore  .travis.yml  README.md  config.py  netplot.py  netplot.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  whois-report.sh
.github/workflows/: python-app.yml  python-package.yml
netplot/: __main__.py  netplot.py
netplot/processor/: host_processor.py  process_processor.py  processor.py  raw_processor.py
processor/: host_processor.py  process_processor.py  processor.py  raw_processor.py
provider/: DomainProvider.py
test/: test_host_processor.py  test_raw_processor.py
test/packets/: arp.pcap  tcp_incoming.pcap  tcp_outgoing.pcap  udp_incoming.pcap  udp_outgoing.pcap
