[metadata]
name = netplot
version = 0.1.1
author = "Federico Bonfiglio"

[options]
packages = find:
install_requires =
    numpy==1.22.3
    pandas==1.4.2
    psutil==5.9.0
    python-dateutil==2.8.2
    pytz==2022.1
    scapy==2.4.5
    six==1.16.0
    termplotlib==0.3.9

[options.entry_points]
console_scripts =
    netplot = netplot.netplot:main

